# control-panel-webapp

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/.vuepress/: config.ts
docs/.vuepress/styles/: palette.scss
etc/: app.cfg
front/: README.md  package-lock.json  package.json  vite.config.ts
front/src/: main.ts
lib/data/: state.json
lib/db/: database_api_mysql.py
lib/db/base/: mysql_base.py
lib/models/: state.py
lib/utils/: flask_utils.py  singleton.py
lib/utils/drivers/: mongodb_client.py  mysql_client.py  oracle_client.py  redis_client.py
server/: README.md  dockerfile
server/etc/: log.cfg
server/lib/: __init__.py  web.py
server/lib/models/: base.py
server/lib/server/: state_server.py
server/lib/utils/: db_utils.py  log_utils.py
server/lib/utils/drivers/core/: db_utils.py  fork_safe_client.py  fork_safe_db_client.py
